2010-09-07  Murray Cumming  <murrayc@murrayc.com>

	Added Device class.

	* cairomm/device.[h|cc]: Added these files, wrapping cairo_device_t.
  * cairomm/filelist.am:
  * cairomm/cairomm.h: Mention the new file.

1.9.2:

2010-09-02  Murray Cumming  <murrayc@murrayc.com>

	Context: set_dash(): Make the dashes parameter const.

	* cairomm/context.[h|cc]: set_dash(): Add versions that take a const
  vector parameter, deprecating the old versions.

2010-09-02  Murray Cumming  <murrayc@murrayc.com>

	Context: Make some methods const, deprecating the non-const versions.

	* cairomm/context.[h|cc]: device_to_user(, device_to_user_distance(),
  user_to_device(), user_to_device_distance(): Deprecate the non-const versions,
  adding const versions.

2010-06-10  Ian Britten  <britten@caris.com>

	Cleanup of most -Weffc++ warnings. Bug #28246.

	* cairomm/fontface.h (FontFace::FontFace):
	* cairomm/path.h (Path::Path):
	* cairomm/pattern.h (Pattern::Pattern):
	* cairomm/scaledfont.h (ScaledFont::ScaledFont):
	* cairomm/surface.h (Surface::Surface): Declare a private copy
	constructor and assignment operator in order to explicitly prevent
	objects from being copied by value.  That was never valid, and not
	disallowing it seems to have been merely an oversight.

	* cairomm/fontoptions.cc:
	* cairomm/scaledfont.cc: Initialize member(s) in initialization list.

	* cairomm/scaledfont.h: Declared ~ScaledFont() virtual

1.9.1:

2010-07-06  Murray Cumming  <murrayc@murrayc.com>

	Add Region, wrapping cairo_region_t, new in cairo 1.10.

	* cairomm/region.[h|cc]: Added this class, wrapping it like other
    reference-counted types, such as Pattern.
    * cairomm/cairomm.h: Add an include of it here.
    * cairomm/filelist.am: Mention the new files here.

2010-06-07  Daniel Elstner  <danielk@openismus.com>

	Disallow copying of Cairo::Context objects

	* cairomm/context.h (Cairo::Context): Declare a private copy
	constructor and assignment operator in order to explicitly prevent