@@ -64,7 +64,7 @@ namespace Cairo
  * different subtypes of cairo surface for different drawing backends.  This
  * class is a base class for all subtypes and should not be used directly
  *
- * Surfaces are reference-counted objects that should be used via Cairo::RefPtr. 
+ * Surfaces are reference-counted objects that should be used via Cairo::RefPtr.
  */
 class Surface
 {
@@ -107,6 +107,46 @@ public:
   explicit Surface(cairo_surface_t* cobject, bool has_reference = false);
 
   virtual ~Surface();
+
+  /** Return mime data previously attached to surface using the specified mime type. If no data has been attached with the given mime type then this returns 0.
+   *
+   * @param mime_type The MIME type of the image data.
+   * @param length This will be set to the length of the image data.
+   * @result The image data attached to the surface.
+   */
+  const unsigned char* get_mime_data(const std::string& mime_type, unsigned long& length);
+
+
+  /** For instance,
+   * void on_destroy();
+   */
+  typedef sigc::slot<void> SlotDestroy;
+
+  /** Attach an image in the format mime_type to surface. To remove the data from
+   * a surface, call unset_mime_data() with same mime type.
+   *
+   * The attached image (or filename) data can later be used by backends which
+   * support it (currently: PDF, PS, SVG and Win32 Printing surfaces) to emit
+   * this data instead of making a snapshot of the surface. This approach tends
+   * to be faster and requires less memory and disk space.
+   *
+   * The recognized MIME types are the following: CAIRO_MIME_TYPE_JPEG,
+   * CAIRO_MIME_TYPE_PNG, CAIRO_MIME_TYPE_JP2, CAIRO_MIME_TYPE_URI.
+   *
+   * See corresponding backend surface docs for details about which MIME types
+   * it can handle. Caution: the associated MIME data will be discarded if you
+   * draw on the surface afterwards. Use this function with care.
+   *
+   * @param mime_type The MIME type of the image data.
+   * @param data The image data to attach to the surface.
+   * @param length The length of the image data.
+   * @param slot_destroy A callback slot that will be called when the Surface no longer needs the data. For instance, when the Surface is destroyed or when new image data is attached using the same MIME tpe.
+   */
+  void set_mime_data(const std::string& mime_type, unsigned char* data, unsigned long length, const SlotDestroy& slot_destroy);
+
+  /** Remove the data from a surface. See set_mime_data().
+   */
+  void unset_mime_data(const std::string& mime_type);
 
   /** Retrieves the default font rendering options for the surface. This allows
    * display surfaces to report the correct subpixel order for rendering on
@@ -319,12 +359,12 @@ private:
  * An ImageSurface is the most generic type of Surface and the only one that is
  * available by default.  You can either create an ImageSurface whose data is
  * managed by Cairo, or you can create an ImageSurface with a data buffer that
- * you allocated yourself so that you can have full access to the data.  
+ * you allocated yourself so that you can have full access to the data.
  *
  * When you create an ImageSurface with your own data buffer, you are free to
  * examine the results at any point and do whatever you want with it.  Note that
  * if you modify anything and later want to continue to draw to the surface
- * with cairo, you must let cairo know via Cairo::Surface::mark_dirty() 
+ * with cairo, you must let cairo know via Cairo::Surface::mark_dirty()
  *
  * Note that like all surfaces, an ImageSurface is a reference-counted object that should be used via Cairo::RefPtr.
  */
@@ -753,7 +793,7 @@ public:
   /** @deprecated Use SvgSurface::create_for_stream() instead */
   static RefPtr<SvgSurface> create(cairo_write_func_t write_func, void *closure, double width_in_points, double height_in_points);
 
-  /** 
+  /**
    * Restricts the generated SVG file to the given version. See get_versions()
    * for a list of available version values that can be used here.
    *
@@ -767,7 +807,7 @@ public:
 
   /** Retrieves the list of SVG versions supported by cairo. See
    * restrict_to_version().
-   * 
+   *
    * @since 1.2
    */
   static const std::vector<SvgVersion> get_versions();
